# pycontract

./: .gitignore  CHANGES.md  README-ROS2.md  README.md  package.xml  pycontract_core.py  pyproject.toml  setup.py  test_results.txt
.windsurf/rules/: always-document-changes.md
examples/: run_monitor.py
examples-ros2/: package.xml
examples-ros2/msg/: Command.msg  Status.msg
log/: latest_graph
pycontract/: pycontract.py  pycontract_core.py
pycontract.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/examples/: CMakeLists.txt  package.xml  setup.py
src/examples/resource/: pycontract_examples
src/examples_ros2/: CMakeLists.txt  package.xml  setup.py
src/examples_ros2/launch/: test_monitor.launch.py
src/examples_ros2/msg/: End.msg
src/examples_ros2/scripts/: command_publisher.py  ros2_monitor.py  run_monitor.py  scenario_pub.py  status_publisher.py
src/pycontract/: CMakeLists.txt  package.xml  requirements.txt  setup.py
src/pycontract/pycontract/: __init__.py  pycontract.py  pycontract_core.py
src/pycontract_ros2/: README.md  package.xml  setup.py
src/pycontract_ros2/pycontract_ros2/: __init__.py
test/experiments/: pycontract.py  pycontract_todo.py
test/test10_many_locks/: test10.py
test/test1_locks_slicing/: test1.py
test/test23_orstate/: test23.py
test/test24_orstate/: test24.py
test/test25_various/: test25.py
test/test26_operators/: test26.py
test/test27_ensure/: test27.py
test/test27_exhaustive/: test27.py
test/test29_sequence/: test29.py
test/test2_locks_dicts/: test2.py
test/test30_ok_message/: test30.py
test/test3_locks_dicts_mixed/: test3.py
