[project]
name = "pycontract"
version = "0.1.0"
description = "Runtime verification and contract monitoring"
authors = [{ name = "Your Name", email = "your@email.com" }]
dependencies = [
    "pyfiglet",
    "pandas",
    "matplotlib"
]

[project.optional-dependencies]
ros2 = [
    "rclpy",
    "ros2cli"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"