[project]
name = "pycontract"
version = "0.1.0"
description = "Runtime verification and contract monitoring"
authors = [
    { name = "Klaus Havelund", email = "havelund@gmail.com" },
    { name = "Nicolas Rouquette", email = "nicolas.rouquette@me.com" }
]
dependencies = [
    "pyfiglet",
    "pandas",
    "matplotlib"
]

[project.optional-dependencies]
ros2 = [
    "# These ROS2 packages should be installed via ROS2's package management system",
    "# and not through pip. They are listed here for documentation purposes only.",
    "# Install ROS2 packages using: sudo apt install ros-<ros2-distro>-rclpy ros-<ros2-distro>-ros2cli"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"