[project]
name = "pycontract"
version = "0.1.0"
description = "Runtime verification and contract monitoring"
authors = [
    { name = "Klaus Havelund", email = "havelund@gmail.com" },
    { name = "Nicolas Rouquette", email = "nicolas.rouquette@me.com" }
]
dependencies = [
    "pyfiglet",
    "pandas",
    "matplotlib"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"