<?xml version="1.0"?>
<?xml-stylesheet href="http://www.w3.org/StyleSheets/TR/W3C-ED" type="text/css"?>
<package format="3">
  <name>examples_ros2</name>
  <version>0.0.0</version>
  <description>ROS2 examples for pycontract</description>
  <maintainer email="user@email.com">user</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
