<?xml version="1.0"?>
<package format="3">
  <name>pycontract_examples</name>
  <version>0.1.0</version>
  <description>Examples for pycontract</description>
  <maintainer email="havelund@gmail.com">Klaus Havelund</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>pycontract</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
