<?xml version="1.0"?>
<package format="3">
  <name>pycontract</name>
  <version>0.1.0</version>
  <description>Runtime verification and contract monitoring</description>
  <maintainer email="havelund@gmail.com">Klaus Havelund</maintainer>
  <maintainer email="nicolas.rouquette@me.com">Nicolas Rouquette</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
