<?xml version="1.0"?>
<package format="3">
  <name>pycontract_ros2</name>
  <version>0.1.0</version>
  <description>Helper utilities for integrating PyContract with ROS 2 (adds pattern-matching support to message classes).</description>
  <maintainer email="nfr@jpl.nasa.gov">Nicolas Rouquette</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>pycontract</exec_depend>
  <exec_depend>rosidl_runtime_py</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
